--- a/pipelines/01-docker-build-push.yml
+++ b/pipelines/01-docker-build-push.yml
@@ -14,6 +14,7 @@ variables:
   imageRepository: 'TM/app1nginx'
   containerRegistry: 'dockerhost321.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
+  # Check Build.sourcid
   tag: '$(Build.BuildId)'
   
   # Agent VM image name
