Update 01-docker-build-push.yml for Azure Pipelines

--- a/pipelines/01-docker-build-push.yml
+++ b/pipelines/01-docker-build-push.yml
@@ -14,7 +14,7 @@ variables:
   imageRepository: 'TM/app1nginx'
   containerRegistry: 'dockerhost321.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
-  # Check Build.sourcid
+  # Check Build.sourceversion
   tag: '$(Build.BuildId)'
   
   # Agent VM image name
